--- a/index.html
+++ b/index.html
@@ -1096,7 +1096,7 @@
             <div class="admin-message">
                 <div class="admin-title">After Withdrawal</div>
                 <div class="admin-info">Admin will contact you via Telegram to complete the withdrawal process</div>
-                <div class="admin-contact">@YzemanBot</div>
+                <div class="admin-contact">@yzemanreal</div>
             </div>
         </div>
 
@@ -1104,10 +1104,7 @@
             <div class="social-title">Join Our Community</div>
             <div class="social-icons">
                 <a href="https://t.me/YzemanBot" target="_blank"><i class="fab fa-telegram"></i></a>
-                <a href="https://youtube.com/@yzeupdates" target="_blank"><i class="fab fa-youtube"></i></a>
-                <a href="https://www.facebook.com/share/1ADZJ1DVyn/?mibextid=wwXIfr" target="_blank"><i class="fab fa-facebook"></i></a>
-                <a href="https://www.instagram.com/yzeupdates?igsh=MTR6dHdmODVhcDVzaw%3D%3D&utm_source=qr" target="_blank"><i class="fab fa-instagram"></i></a>
-                <a href="https://x.com/oisreal80231?s=21" target="_blank"><i class="fab fa-twitter"></i></a>
+                
             </div>
         </div>
     </div>
