--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>YzemanBot - Earn Rewards</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <script src='//libtl.com/sdk.js' data-zone='9683863' data-sdk='show_9683863'></script>
@@ -862,7 +862,7 @@
                 <img id="userAvatar" class="user-avatar" src="" alt="Profile">
                 <div class="user-info">
                     <div class="user-name" id="userName">Loading...</div>
-                    <div class="user-id" id="userId">ID: loading</div>
+                    <div class="user-id" id="userId">ID: <span id="userIdValue">loading</span></div>
                 </div>
             </div>
             
