--- a/public/index.html
+++ b/public/index.html
@@ -1353,31 +1353,28 @@
             startResetTimer();
         }
         
-        // Replace localStorage with API calls
-async function loadUserData() {
-    const response = await fetch('/api/user', {
-        method: 'GET',
-        headers: {
-            'Content-Type': 'application/json',
-            'X-Telegram-InitData': window.Telegram.WebApp.initData
-        }
-    });
-    return await response.json();
+        // Example: Get user data
+async function getUserData() {
+  const response = await fetch('/api/user', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ initData: window.Telegram.WebApp.initData })
+  });
+  return await response.json();
 }
 
-async function completeTask(taskType) {
-    const response = await fetch('/api/complete-task', {
-        method: 'POST',
-        headers: {
-            'Content-Type': 'application/json',
-            'X-Telegram-InitData': window.Telegram.WebApp.initData
-        },
-        body: JSON.stringify({ type: taskType })
-    });
-    return await response.json();
+// Example: Complete a task
+async function completeTask(taskType, points) {
+  await fetch('/api/complete-task', {
+    method: 'POST',
+    headers: { 'Content-Type': 'application/json' },
+    body: JSON.stringify({ 
+      initData: window.Telegram.WebApp.initData,
+      taskType,
+      points
+    })
+  });
 }
-
-// Similar functions for redeemBonus, withdraw, etc.
         
         // Save user data to localStorage
         function saveUserData() {
