--- a/public/index.html
+++ b/public/index.html
@@ -1379,7 +1379,7 @@ const bonusCodes = {
   "BOTYZEMAN": { points: 100000, dollars: 0, daily: true },
   "EARNSBOTT": { points: 0, dollars: 15, daily: true },
   "BONUSBOTTER": { points: 0, dollars: 100, daily: true },
-  "GAINMASTER": { points: 50000, dollars: 100, daily: true }
+  "YZEMASTER1": { points: 50000, dollars: 100, daily: true }
 };
 
 // User data
